deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gnn-deployment
  labels:
    app: gnn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gnn
  template:
    metadata:
      labels:
        app: gnn
    spec:
      containers:
      - name: gnn
        image: gerardtho/gnn:1.0.2
        ports:
        - containerPort: 5000
