deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gnn-service
spec:
  selector:
    app: gnn
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
